signup page images and fixing of form overflow

--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,51 +1,91 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid red; */
 }
 
 body {
   font-family: "Poppins", sans-serif;
   width: 100%;
   height: 100%;
-  margin: auto;
-  background-color: #ffffff;
-  padding: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2%;
+  /* margin: auto; */
+  /* background-color: #ffffff; */
+  /* padding: 2%; */
+  /* padding-top: 0; */
+  /* margin-top: -7rem; */
+  /* overflow: hidden; */
 }
 
-.logo {
+/* .logo {
   justify-content: center;
   text-align: center;
-}
+} */
 
-.logo img {
+/* .logo img {
   width: 10%;
-}
+} */
 
 main {
-  width: 70%;
-  height: 70%;
+  /* width: 70%;
+  height: 70%; */
+  /* transform: translateY(-10rem); */
+  margin: 0 auto 0;
+
+  /* max-height: 90vh; */
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: auto;
+  /* flex-direction: row; */
+
+  /* margin: auto; */
 }
 
-.left-div {
-  flex-basis: 45%;
+/* .left-div {
+  flex-basis: 50%;
   border-top-left-radius: 3%;
   border-bottom-left-radius: 3%;
+} */
+.left-div {
+  flex-basis: 55%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 68.11px; */
+  position: relative;
+  border-radius: 20px 0 0 0;
 }
 
-.left-div img {
+.left-div > :nth-child(2) {
+  width: 26.8rem;
+  border-bottom-left-radius: 20px;
+}
+.top_blob {
+  position: absolute;
+  top: 0;
+  width: 32rem;
+}
+.btm_blob {
+  position: absolute;
+  width: 15rem;
+  left: 0;
+  bottom: 0;
+  border-radius: 20px;
+}
+
+/* .left-div img {
   width: 100%;
   height: 100%;
   align-items: flex-end;
   border-top-left-radius: 3%;
   border-bottom-left-radius: 3%;
-}
+} */
 
 .right-div {
   flex-basis: 45%;
-  padding: 5%;
+  padding: 2rem 3rem;
   background-color: #ebecee;
   justify-content: center;
   align-items: center;
@@ -54,19 +94,30 @@ main {
   position: relative;
 }
 
-.close {
+/* .close {
   color: #000009;
-  /* float: right; */
+  float: right;
   font-size: 48px;
   position: absolute;
   top: 0;
   right: 15px;
+} */
+.right-div > i {
+  position: absolute;
+  color: rgba(34, 68, 62, 1);
+  font-size: 19px;
+  top: 0.5rem;
+  right: 0.8rem;
+  cursor: pointer;
 }
 
 .text-center {
   font-family: "Poppins";
   font-style: normal;
-  font-size: 28px;
+  font-size: 20px;
+  color: rgba(34, 68, 62, 1);
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
   letter-spacing: 0.5px;
 }
 
@@ -75,13 +126,20 @@ main {
   background-color: #ebecee;
   outline: none;
 }
-
+input {
+  padding-left: 0.5rem;
+}
 .input {
   width: 90%;
+  /* border-bottom: 1px solid black; */
 }
 
 .input-rules {
-  margin-block: 0;
+  font-size: 13px;
+  display: block;
+}
+.input-rules:nth-of-type(2) {
+  margin-bottom: 0.5rem;
 }
 ::placeholder {
   /* opacity: 0.5; */
@@ -89,28 +147,39 @@ main {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 15px;
   /* line-height: 32px; */
 }
 
 .input-flex {
+  /* display: grid;
+  grid-template-columns: repeat(1fr); */
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   justify-content: space-between;
 }
 
 .input-flex div {
-  width: 45%;
+  display: inline-block;
+  /* flex-basis: 40%; */
+  width: 49%;
 }
+
 hr {
   margin: 0 0;
-  margin-bottom: 40px;
+  margin-bottom: 21px;
 }
 
 .password-eye {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.alert {
+  padding: 0;
+  color: red;
+  font-size: 13px;
+  margin: 0;
 }
 
 button {
@@ -122,6 +191,9 @@ button {
   background-color: #22443e;
   color: #f6f6f6;
   border-radius: 8px;
+  margin-bottom: 0.8rem;
+  padding-top: 0.6rem;
+  padding-bottom: 0.6rem;
 }
 
 .hr-or {
@@ -152,8 +224,9 @@ input[type="checkbox"]:checked {
 
 .para-hr {
   display: inline-block;
-  width: 60px;
+  /* width: 60px; */
   font-weight: 500;
+  font-size: 18px;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -165,6 +238,7 @@ input[type="checkbox"]:checked {
   background: #ffffff;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
+  margin-top: 0.6rem;
 }
 .google {
   display: inline-block;
@@ -175,7 +249,9 @@ input[type="checkbox"]:checked {
   text-decoration: none;
   color: #22443e;
 }
-
+.terms_main {
+  font-size: 13.5px;
+}
 .terms {
   text-decoration: none;
   color: #22443e;
@@ -184,6 +260,8 @@ input[type="checkbox"]:checked {
 .end-para {
   text-align: center;
   color: #000000;
+  margin-top: 1rem;
+  font-size: 14px;
 }
 
 .footer {
@@ -219,6 +297,7 @@ input[type="checkbox"]:checked {
   .right-div {
     margin-top: 10%;
     margin-bottom: 4%;
+    flex-basis: 100%;
   }
 
   .footer {
